# aws-jmespath-utils

./: .gitignore  README.md  pyproject.toml
aws_jmespath_utils/: __init__.py  common.py  filter_tags.py
examples/: 01_filter_tags_basic.py  02_filter_tags_exclude.py
tests/: test.py
tests/data/: ec2_describe_instances.json
